@@ -20,7 +20,7 @@ Name: rpm
 %define version 4.0.4
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.8
+Release: 0.9
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -175,7 +175,8 @@ make
 { cd Perl-RPM
   CFLAGS="$RPM_OPT_FLAGS" perl Makefile.PL
   export SUBDIR="%{_builddir}/%{buildsubdir}"
-  make INC="-I. -I$SUBDIR/lib -I$SUBDIR/rpmio -I$SUBDIR/popt" %{?_smp_mflags}
+  make INC="-I. -I$SUBDIR/lib -I$SUBDIR/rpmdb -I$SUBDIR/rpmio -I$SUBDIR/popt" \
+    LDDLFLAGS="-shared -L$SUBDIR/lib/.libs -L$SUBDIR/rpmdb/.libs -L$SUBDIR/rpmio/.libs -L$SUBDIR/popt/.libs" %{?_smp_mflags}
 }
 %endif
 
@@ -222,7 +223,10 @@ gzip -9n apidocs/man/man*/* || :
   eval `perl '-V:installsitearch'`
   eval `perl '-V:installarchlib'`
   mkdir -p $RPM_BUILD_ROOT/$installarchlib
-  make PREFIX=$RPM_BUILD_ROOT/usr install
+  make PREFIX=${RPM_BUILD_ROOT}%{__prefix} \
+    INSTALLMAN1DIR=${RPM_BUILD_ROOT}%{__prefix}%{__share}/man/man1 \
+    INSTALLMAN3DIR=${RPM_BUILD_ROOT}%{__prefix}%{__share}/man/man3 \
+	install
   rm -f $RPM_BUILD_ROOT/$installarchlib/perllocal.pod
   rm -f $RPM_BUILD_ROOT/$installsitearch/auto/RPM/.packlist
   cd ..
@@ -514,6 +518,7 @@ fi
 %changelog
 * Tue Jan  8 2002 Jeff Johnson <jbj@redhat.com>
 - use db-4.0.14 final internally.
+- make rpm-perl package self-hosting (#57748).
 
 * Mon Jan  7 2002 Jeff Johnson <jbj@redhat.com>
 - Depends should use CDB if configured.
