@@ -14,6 +14,7 @@
 	- Depends should use CDB if configured.
 	- autodetect python 1.5/2.2.
 	- use db-4.0.14 final internally.
+	- make rpm-perl package self-hosting (#57748).
 
 4.0.2 -> 4.0.3:
 	- update per-interpreter dependency scripts, add sql/tcl (#20295).
